added padding to about section

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ footer h2 {
 }
 
 .about-section-content {
-  height: 70vh;
+  padding: 5%;
   text-align: center;
   background-color: white;
   margin: 5% 21%;
